# my_aiogram_template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.example  Makefile  README.md  alembic.ini  docker-compose.yml.example  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20250617_2245_first_models_migration.py
app/bot/: bot.py
app/bot/enums/: __init__.py
app/bot/handlers/: __init__.py  admin.py  general.py
app/bot/keyboards/: __init__.py  side_menu.py
app/bot/lexicon/: __init__.py  lexicon.py  main_menu.py
app/bot/middlewares/: __init__.py  is_admin.py  publisher.py  repository.py  session.py  throttling.py  user.py
app/bot/repository/: users.py
app/bot/schemas/: __init__.py  user.py
app/bot/services/: __init__.py  admin_services.py  user_services.py
app/core/: __init__.py  bot.py  db.py  dispatcher.py  faststream.py  storage.py
app/faststream/: __init__.py
app/faststream/delayed_msg/: router.py
app/infrastructure/database/models/: __init__.py  users.py
app/infrastructure/database/repository/: __init__.py  base.py  users.py
app/services/faststream/: __init__.py
app/services/faststream/delayed_msg/: publisher.py  router.py
app/services/scheduler/: __init__.py  taskiq_broker.py  taskiq_lexicon.py  tasks.py
config/: __init__.py  config_reader.py  loggers.py
