[project]
name = "presentation-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "environs>=14.2.0",
    "faststream[nats]>=0.5.48",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "taskiq-aiogram>=0.3.1",
    "taskiq-faststream>=0.2.3",
    "taskiq-nats>=0.5.1",
    "taskiq-redis>=1.1.0",
    "taskiq[faststream,nats]>=0.11.18",
]
