[project]
name = "presentation-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogram-dialog>=2.3.1",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "environs>=14.2.0",
    "faststream[nats]>=0.5.48",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "taskiq-aiogram>=0.3.1",
    "taskiq-faststream>=0.2.3",
    "taskiq-nats>=0.5.1",
    "taskiq-redis>=1.1.0",
    "taskiq[faststream,nats]>=0.11.18",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.ruff]
target-version = "py311"
line-length = 110
extend-exclude = [
    "alembic",
    "__init__.py",
    "__pycache__",
    ".git/",
    "env/",
    "venv/",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "R",  # refactor
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "ARG001", # Unused function argument
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising exceptions without from e, for HTTPException
    "F841", # Local variable `response` is assigned to but never used
    "RET504", # Unnecessary assignment to `users` before `return` statement
    "UP015", # [*] Unnecessary open mode parameters
]
